--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,7 @@
   --color-blue2: #2b6496;
   --color-blue3: #4c84ac;
   --color-red: #d71b26;
+  --color-red2: #be242d;
+  --color-red3: #ce6b6f;
   --color-grey1:#ece6e7;
 }
